After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697227 - rtpsbcdepay is not selected from decodebin
rtpsbcdepay is not selected from decodebin
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-03 21:58 UTC by andreas.fenkart
Modified: 2013-04-03 22:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GST_DEBUG=3 output of the first pipeline (1.58 KB, text/x-log)
2013-04-03 21:58 UTC, andreas.fenkart
Details

Description andreas.fenkart 2013-04-03 21:58:49 UTC
Created attachment 240549 [details]
GST_DEBUG=3 output of the first pipeline

This pipeline fails, with "No suitable plugins found"
gst-launch-1.0 avdtpsrc transport=$1 ! queue ! decodebin ! filesink location=./decodebin.dump

While this pipeline works:
gst-launch-1.0 avdtpsrc transport=$1 ! rtpsbcdepay ! queue ! decodebin ! filesink location=./decodebin.dump
Comment 1 Olivier Crête 2013-04-03 22:26:43 UTC
The rank was none, now changed it to secondary, so it should auto-plug.

commit f8831c0cd2cac0e11e05af087983e20637d6dd12
Author: Olivier Crête <olivier.crete@collabora.com>
Date:   Wed Apr 3 18:24:29 2013 -0400

    rtpsbcdepay: Rank as secondary
    
    This way, it will be selected by decodebin
    Bug reported by andreas.fenkart@streamunlimited.com
    
    https://bugzilla.gnome.org/show_bug.cgi?id=697227