rtpsbcdepay: Rank as secondary

This way, it will be selected by decodebin
Bug reported by andreas.fenkart@streamunlimited.com

https://bugzilla.gnome.org/show_bug.cgi?id=697227