gst/rtp/gstrtpsbcdepay.c
@@ -282,6 +282,6 @@ bad_packet:
 gboolean
 gst_rtp_sbc_depay_plugin_init (GstPlugin * plugin)
 {
-  return gst_element_register (plugin, "rtpsbcdepay", GST_RANK_NONE,
+  return gst_element_register (plugin, "rtpsbcdepay", GST_RANK_SECONDARY,
       GST_TYPE_RTP_SBC_DEPAY);
 }
